vsphere/7.0/docs/reports/README.md
# Tanzu STIG Hardening Reports

## Overview
Hardening reports are made available for vSphere with Tanzu for both the Supervisor cluster and Tanzu Kubernetes Release images used to deploy guest clusters.

## Reports
|       Type        |       Version      |     Release Date   |      Download      |
|:-----------------:|:------------------:|:------------------:|:------------------:|
|     `Supervisor`  |       `7.0.3p`     |     May 2024       |[VMware_vSphere_with_Tanzu_7_Supervisor_Cluster_7.0.3p_STIG_Hardening_Overview.pdf](VMware_vSphere_with_Tanzu_7_Supervisor_Cluster_7.0.3p_STIG_Hardening_Overview.pdf)|
|     `TKR`         |  `1.24.11` `Photon`|     September 2023 |[VMware_vSphere_with_Tanzu_7_TKr_1.24.11_STIG_Hardening_Overview.pdf](VMware_vSphere_with_Tanzu_7_TKr_1.24.11_STIG_Hardening_Overview.pdf)|
|     `TKR`         |  `1.25.13` `Photon`|     September 2023 |[VMware_vSphere_with_Tanzu_7_TKr_1.25.13_STIG_Hardening_Overview.pdf](VMware_vSphere_with_Tanzu_7_TKr_1.25.13_STIG_Hardening_Overview.pdf)|
|     `TKR`         |  `1.26.10` `Photon`|     September 2023 |[VMware_vSphere_with_Tanzu_7_TKr_1.26.10_STIG_Hardening_Overview.pdf](VMware_vSphere_with_Tanzu_7_TKr_1.26.10_STIG_Hardening_Overview.pdf)|
|     `TKR`         | `1.26.12` `Photon` |     May 2024       |[VMware_vSphere_with_Tanzu_7_TKr_1.26.12_STIG_Hardening_Overview.pdf](VMware_vSphere_with_Tanzu_7_TKr_1.26.12_STIG_Hardening_Overview.pdf)|
|     `TKR`         | `1.27.6` `Photon`  |     May 2024       |[VMware_vSphere_with_Tanzu_8_TKr_1.27.11_STIG_Hardening_Overview.pdf](VMware_vSphere_with_Tanzu_8_TKr_1.27.11_STIG_Hardening_Overview.pdf)|
|     `TKR`         | `1.27.10` `Photon` |     May 2024       |[VMware_vSphere_with_Tanzu_8_TKr_1.27.11_STIG_Hardening_Overview.pdf](VMware_vSphere_with_Tanzu_8_TKr_1.27.11_STIG_Hardening_Overview.pdf)|
