vsphere/8.0/docs/reports/README.md
# Tanzu STIG Hardening Reports

## Overview
Hardening reports are made available for vSphere with Tanzu for both the Supervisor cluster and Tanzu Kubernetes Release images used to deploy guest clusters.

## Reports
|       Type        |       Version      |     Release Date   |      Download      |
|:-----------------:|:------------------:|:------------------:|:------------------:|
|     `Supervisor`  |       `8.0.1`      |     April 2023     |[VMware_vSphere_with_Tanzu_8_Supervisor_Cluster_8.0.1_STIG_Hardening_Overview.pdf](VMware_vSphere_with_Tanzu_8_Supervisor_Cluster_8.0.1_STIG_Hardening_Overview.pdf)|
|     `Supervisor`  |       `8.0.2c`     |     April 2024     |[VMware_vSphere_with_Tanzu_8_Supervisor_Cluster_8.0.2c_STIG_Hardening_Overview.pdf](VMware_vSphere_with_Tanzu_8_Supervisor_Cluster_8.0.2c_STIG_Hardening_Overview.pdf)|
|     `TKr`         |  `1.25.7` `Photon` |     September 2023 |[VMware_vSphere_with_Tanzu_8_TKr_1.25.7_STIG_Hardening_Overview.pdf](VMware_vSphere_with_Tanzu_8_TKr_1.25.7_STIG_Hardening_Overview.pdf)|
|     `TKr`         |  `1.26.5` `Photon` |     September 2023 |[VMware_vSphere_with_Tanzu_8_TKr_1.26.5_STIG_Hardening_Overview.pdf](VMware_vSphere_with_Tanzu_8_TKr_1.26.5_STIG_Hardening_Overview.pdf)|
|     `TKr`         | `1.26.13` `Photon` |     October 2024   |[VMware_vSphere_with_Tanzu_8_TKr_1.26.13_STIG_Hardening_Overview.pdf](VMware_vSphere_with_Tanzu_8_TKr_1.26.13_STIG_Hardening_Overview.pdf)|
|     `TKr`         | `1.27.11` `Photon` |     May 2024       |[VMware_vSphere_with_Tanzu_8_TKr_1.27.11_STIG_Hardening_Overview.pdf](VMware_vSphere_with_Tanzu_8_TKr_1.27.11_STIG_Hardening_Overview.pdf)|
|     `TKr`         |  `1.28.8` `Photon` |     October 2024   |[VMware_vSphere_with_Tanzu_8_TKr_1.28.8_STIG_Hardening_Overview.pdf](VMware_vSphere_with_Tanzu_8_TKr_1.28.8_STIG_Hardening_Overview.pdf)|
|     `TKr`         |  `1.29.4` `Photon` |     October 2024   |[VMware_vSphere_with_Tanzu_8_TKr_1.29.4_STIG_Hardening_Overview.pdf](VMware_vSphere_with_Tanzu_8_TKr_1.29.4_STIG_Hardening_Overview.pdf)|
|     `TKr`         |  `1.30.1` `Photon` |     October 2024   |[VMware_vSphere_with_Tanzu_8_TKr_1.30.1_STIG_Hardening_Overview.pdf](VMware_vSphere_with_Tanzu_8_TKr_1.30.1_STIG_Hardening_Overview.pdf)|
|     `TKr`         |  `1.31.1` `Photon` |     October 2024   |[VMware_vSphere_with_Tanzu_8_TKr_1.31.1_STIG_Hardening_Overview.pdf](VMware_vSphere_with_Tanzu_8_TKr_1.31.1_STIG_Hardening_Overview.pdf)|
|     `VKr`         |  `1.30.8` `Photon` |     February 2025  |[VVMware_vSphere_with_Tanzu_8_VKr_1.30.8_STIG_Hardening_Overview.pdf](VMware_vSphere_with_Tanzu_8_VKr_1.30.8_STIG_Hardening_Overview.pdf)|
|     `VKr`         |  `1.31.4` `Photon` |     February 2025  |[VMware_vSphere_with_Tanzu_8_VKr_1.31.4_STIG_Hardening_Overview.pdf](VMware_vSphere_with_Tanzu_8_VKr_1.31.4_STIG_Hardening_Overview.pdf)|
|     `VKr`         |  `1.32.0` `Photon` |     February 2025  |[VMware_vSphere_with_Tanzu_8_VKr_1.32.0_STIG_Hardening_Overview.pdf](VMware_vSphere_with_Tanzu_8_VKr_1.32.0_STIG_Hardening_Overview.pdf)|
|     `Supervisor`  |       `8.0.3d`     |     March 2025     |[VMware_vSphere_Supervisor_8.0.3d_STIG_Hardening_Overview.pdf](VMware_vSphere_Supervisor_8.0.3d_STIG_Hardening_Overview.pdf)|
